--- a/MyWeatherApp/Info.plist
+++ b/MyWeatherApp/Info.plist
@@ -44,5 +44,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please allow us to configure your location to provide accurate and up-to-date weather information</string>
 </dict>
 </plist>
